--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=api_service
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
+server.port=8090
 spring.jpa.hibernate.ddl-auto=update
-
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/product
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
